--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+dataclasses-json = "^0.6.4"
 pandas = "^2.2.1"
 py7zr = "^0.20.8"
 rarfile = "^4.1"
