--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 dataclasses-json = "^0.6.4"
+jinja2 = "^3.1.3"
+markdown = "^3.5.2"
+openpyxl = "^3.1.2"
 pandas = "^2.2.1"
 py7zr = "^0.20.8"
+pydantic-settings = "^2.2.1"
 rarfile = "^4.1"
 typer = "^0.9.0"
 typing-extensions = "^4.10.0"
@@ -49,7 +53,7 @@ ignore = [
 line-length = 120
 
 [tool.ruff.lint]
-ignore = ["B008", "E711", "E712", "F403", "F405", "E402", "C901"]
+ignore = ["B008", "E711", "E712", "F403", "F405", "E402", "C901", "E741"]
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
