--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ typer = "^0.9.0"
 typing-extensions = "^4.10.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.2.2"
 mypy = "^1.8.0"
+ruff = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -37,6 +37,9 @@ strict = true
 check_untyped_defs = false
 
 [tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -46,17 +49,13 @@ select = [
     "B",  # flake8-bugbear
 ]
 ignore = [
-    "E501",  # line too long, handled by black
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
+    # "E402",  # Module level import not at top of cell
+    "E501",  # line too long, handled by black
+    # "F403",  # from {name} import * used; unable to detect undefined names
+    # "F405",  # {name} may be undefined, or defined from star imports
 ]
-line-length = 120
-
-[tool.ruff.lint]
-ignore = ["B008", "E711", "E712", "F403", "F405", "E402", "C901", "E741"]
-
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["F401"]
 
 [tool.ruff.isort]
 known-third-party = []
