--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ ignore = [
     "E501",  # line too long, handled by black
     # "F403",  # from {name} import * used; unable to detect undefined names
     # "F405",  # {name} may be undefined, or defined from star imports
+    "E741", # Ambiguous variable name
 ]
 
 [tool.ruff.isort]
