--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.11"
 dataclasses-json = "^0.6.4"
 jinja2 = "^3.1.3"
-markdown = "^3.5.2"
+markdown = "^3.6.0"
 openpyxl = "^3.1.2"
 pandas = "^2.2.1"
 py7zr = "^0.20.8"
@@ -18,10 +18,11 @@ pydantic-settings = "^2.2.1"
 rarfile = "^4.1"
 typer = "^0.9.0"
 typing-extensions = "^4.10.0"
+rich = "^13.7.1"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.8.0"
-ruff = "^0.3.0"
+mypy = "^1.9.0"
+ruff = "^0.3.3"
 
 [build-system]
 requires = ["poetry-core"]
