--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,42 @@
-[tool.poetry]
-name = "cpp-coursework-collection-tools"
-version = "0.1.0"
+[project]
+name = "cpp-coursework-tools"
+version = "0.2.0"
 description = ""
-authors = ["QuadnucYard <2380433991@qq.com>"]
-license = "MIT"
-readme = "README.md"
+authors = [
+    {name = "QuadnucYard", email = "2380433991@qq.com"},
+]
+requires-python = "<4.0,>=3.11"
+license = {text = "MIT"}
 
-[tool.poetry.dependencies]
-python = "^3.11"
-dataclasses-json = "^0.6.4"
-jinja2 = "^3.1.3"
-markdown = "^3.6.0"
-openpyxl = "^3.1.2"
-pandas = "^2.2.1"
-py7zr = "^0.20.8"
-pydantic-settings = "^2.2.1"
-rarfile = "^4.1"
-typer = "^0.9.0"
-typing-extensions = "^4.10.0"
-rich = "^13.7.1"
-
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.9.0"
-ruff = "^0.3.3"
+dependencies = [
+    "dataclasses-json<1.0.0,>=0.6.4",
+    "jinja2<4.0.0,>=3.1.3",
+    "markdown<4.0.0,>=3.6.0",
+    "openpyxl<4.0.0,>=3.1.2",
+    "pandas<3.0.0,>=2.2.1",
+    "py7zr<1.0.0,>=0.20.8",
+    "pydantic-settings<3.0.0,>=2.2.1",
+    "rarfile<5.0,>=4.1",
+    "typer<1.0.0,>=0.9.0",
+    "typing-extensions<5.0.0,>=4.10.0",
+    "rich<14.0.0,>=13.7.1",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
+[tool.pdm]
+distribution = false
+
+[tool.pdm.build]
+includes = []
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "mypy<2.0.0,>=1.9.0",
+    "ruff<1.0.0,>=0.3.3",
+]
 
 [tool.black]
 line-length = 120
@@ -48,6 +57,7 @@ select = [
     "I",  # isort
     "C",  # flake8-comprehensions
     "B",  # flake8-bugbear
+    "UP", # pyupgrade
 ]
 ignore = [
     "B008",  # do not perform function calls in argument defaults
@@ -61,3 +71,7 @@ ignore = [
 
 [tool.ruff.isort]
 known-third-party = []
+
+[tool.ruff.lint.pyupgrade]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+keep-runtime-typing = true
