--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "typer<1.0.0,>=0.9.0",
     "typing-extensions<5.0.0,>=4.10.0",
     "rich<14.0.0,>=13.7.1",
+    "premailer>=3.10.0",
 ]
 
 [build-system]
