--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,9 @@ ignore = [
     "E741", # Ambiguous variable name
 ]
 
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+
 [tool.ruff.isort]
 known-third-party = []
 
