--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "rich<14.0.0,>=13.7.1",
     "premailer>=3.10.0",
     "chardet>=5.2.0",
+    "result>=0.16.1",
+    "more-itertools>=10.2.0",
 ]
 
 [build-system]
@@ -47,6 +49,8 @@ target-version = ['py311']
 [tool.mypy]
 strict = true
 check_untyped_defs = false
+disable_error_code = "import-untyped"
+ignore_missing_imports = true
 
 [tool.ruff]
 line-length = 120
