--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,50 +1,21 @@
 [project]
 name = "cpp-coursework-tools"
-version = "0.2.0"
-description = ""
+version = "0.1.0"
+description = "Add your description here"
 authors = [
-    {name = "QuadnucYard", email = "2380433991@qq.com"},
+    { name = "QuadnucYard", email = "2380433991@qq.com" }
 ]
-requires-python = "<4.0,>=3.12"
-license = {text = "MIT"}
+dependencies = []
+readme = "README.md"
+requires-python = ">= 3.12"
 
-dependencies = [
-    "dataclasses-json<1.0.0,>=0.6.4",
-    "jinja2<4.0.0,>=3.1.3",
-    "markdown<4.0.0,>=3.6.0",
-    "openpyxl<4.0.0,>=3.1.2",
-    "pandas<3.0.0,>=2.2.1",
-    "py7zr<1.0.0,>=0.20.8",
-    "pydantic-settings<3.0.0,>=2.2.1",
-    "rarfile<5.0,>=4.1",
-    "typer<1.0.0,>=0.9.0",
-    "typing-extensions<5.0.0,>=4.10.0",
-    "rich<14.0.0,>=13.7.1",
-    "premailer>=3.10.0",
-    "chardet>=5.2.0",
-    "result>=0.16.1",
-    "more-itertools>=10.2.0",
-]
+[tool.rye]
+managed = true
+virtual = true
+dev-dependencies = []
 
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
-
-[tool.pdm]
-distribution = false
-
-[tool.pdm.build]
-includes = []
-
-[tool.pdm.dev-dependencies]
-dev = [
-    "mypy<2.0.0,>=1.9.0",
-    "ruff<1.0.0,>=0.3.3",
-]
-
-[tool.black]
-line-length = 120
-target-version = ['py311']
+[tool.rye.workspace]
+members = ["hwtools", "stutestpy"]
 
 [tool.mypy]
 strict = true
@@ -57,19 +28,19 @@ line-length = 120
 
 [tool.ruff.lint]
 select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "C",  # flake8-comprehensions
-    "B",  # flake8-bugbear
+    "E", # pycodestyle errors
+    "W", # pycodestyle warnings
+    "F", # pyflakes
+    "I", # isort
+    "C", # flake8-comprehensions
+    "B", # flake8-bugbear
     "UP", # pyupgrade
 ]
 ignore = [
-    "B008",  # do not perform function calls in argument defaults
-    "C901",  # too complex
+    "B008", # do not perform function calls in argument defaults
+    "C901", # too complex
     # "E402",  # Module level import not at top of cell
-    "E501",  # line too long, handled by black
+    "E501", # line too long, handled by black
     # "F403",  # from {name} import * used; unable to detect undefined names
     # "F405",  # {name} may be undefined, or defined from star imports
     "E741", # Ambiguous variable name
