--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,10 +46,7 @@ ignore = [
     "E741", # Ambiguous variable name
 ]
 
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["F401"]
-
-[tool.ruff.isort]
+[tool.lint.isort]
 known-third-party = []
 
 [tool.ruff.lint.pyupgrade]
